[package]
name = "updown"
version = "0.1.0"
authors = ["Will Mepham <willmepham@fastmail.fm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"]}
serde = { version = "1.0.11", features = ["derive"] }
serde_json = "1.0.57"
typed-builder = "0.7.0"
validator = { version = "0.11", features = ["derive"] }
validator_derive = "0.11.0"
quick-error = "=1.2.2"
derive_builder = "0.9.0"
structopt = "0.3.18"
clap = "2.33.3"